toggle dark mode button + some smaller mods

--- a/main.css
+++ b/main.css
@@ -2,12 +2,30 @@ h1 {
     text-align: center;
 }
 
+/* body .dark {
+    background-color: darkslategrey;
+    color: azure;
+} */
+
 #launch-list {
     overflow: scroll;
-    height: 75vh;
+    height: 50vh;
     display: flex;
     flex-direction: column;
     max-width: fit-content;
+    scrollbar-color: teal;
+    scrollbar-width: thin;
+}
+
+ul {
+    list-style: none;
+}
+
+#launch-list li {
+    cursor: pointer;
+    margin-top: 20px;
+    margin-bottom: 20px;
+
 }
 
 .flight-details {
@@ -17,13 +35,36 @@ h1 {
     right: 800px;
     text-align: center;
     word-wrap: normal;
+    /* border-style: ridge; */
 }
 
 body {
     text-align: center;
     z-index: 1;
+    background-color: whitesmoke;
+    color: black;
+}
+
+.dark-mode {
+    background-color: black;
+    color: white;
 }
 
 h1 {
     font-family: Arial, Helvetica, sans-serif;
+}
+
+#search-form {
+    text-align: left;
+    cursor: pointer;
+}
+
+button {
+    margin-bottom: 25px;
+    cursor: pointer;
+}
+
+#dark {
+    position: absolute;
+    left: 125px;
 }
